intTests/test_type_errors/err030.saw
//
// Too many arguments for type constructor: Type
//

let x : Type Int = {| [8] |};


